TMForumHackathon/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>TMF_Is_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TMFORUM: isBundle determines whether a productOffering represents a single productOffering (false), or a bundle of productOfferings</description>
        <label>Is Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMF_Valid_For_End_Date__c</fullName>
        <description>TMFORUM: Valid for End Date</description>
        <label>Valid For End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TMF_Valid_For_Start_Date__c</fullName>
        <description>TMFORUM: Valid from Date</description>
        <label>Valid For Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TMF_Version__c</fullName>
        <description>TMFORUM: ProductOffering version</description>
        <inlineHelpText>ProductOffering version</inlineHelpText>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>